--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "phaser": "^3.9.0"
+    "phaser": "^3.9.0",
+    "webfontloader": "^1.6.28"
   }
 }
