--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack && webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -R dist/",
+    "deploy": "gsutil -m cp -r -z css,js,json,ogg,png,ttf dist/* gs://www.moodgame.pw"
   },
   "author": "",
   "license": "ISC",
